# binchotan-frontend-sample

./: .env.template  Cargo.toml  LICENSE  README.md
src/: main.rs
