[package]
name = "binchotan-frontend-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "~0.15"
serde_json = "~1.0"
serde = "~1"
tracing = "~0.1"
tracing-subscriber = "~0.2"
anyhow = "~1"
clap = { version = "~3.2.17", features = ["derive"] }
uuid = { version = "~1.1.2", features = ["v4"] }
colored_json = "~2.1.0"
